Primeros cambios básicos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
         <title>Luis Albert Morla</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+       <!--  Hoja de estilos css externa  -->
         <link rel="stylesheet" href="css\styles.css">
+
+       <!--       Icono de la web -->
+       <link rel="shortcut icon" href="letter-l.png" type="image/x-icon">
+   
     </head>
     <body>
         <!--[if lt IE 7]>
