Añadiendo imagenes y modos de Display de las mismas

--- a/index.html
+++ b/index.html
@@ -9,20 +9,41 @@
         <title>Luis Albert Morla</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-       <!--  Hoja de estilos css externa  -->
+
+       <!--Hoja de estilos css externa-->
         <link rel="stylesheet" href="css\styles.css">
-       <!--       Icono de la web -->
+
+       <!--Icono de la web -->
        <link rel="shortcut icon" href="letter-l.png" type="image/x-icon">
    
+
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
-        <h1>Soy Luis Albert</h1>
-        
-        
+        <!-- 
+          [if lt IE 7]>
+          <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+          <![endif]
+        -->
+
+        <div class="CONTENEDOR-SUPERIOR ">
+            <img src="img\clouds.png" alt="" sizes="" srcset="">
+            <h1>Soy Luis Albert</h1>
+            <p>Un entusiasta desarrollador web jr.</p>
+            <img src="img\clouds.png" alt="" sizes="" srcset="">
+            <img src="img\Montaña1000px.png" alt="" sizes="" srcset="">
+        </div>
+
+
+        <div class="CONTENEDOR-INTERMEDIO">
+
+        </div>
+
+        <div class="CONTENEDOR-INFERIOR">
+
+        </div>
         <script src="" async defer></script>
+
+
     </body>
 </html>
