--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
        <!--Icono de la web -->
        <link rel="shortcut icon" href="letter-l.png" type="image/x-icon">
-   
-
+      <!--TODO:REVISAR ENALCE CON UDEMY-->>
+      <!--TODO:Actualizar sentencias basicas -->
     </head>
     <body>
 
@@ -27,10 +27,10 @@
         -->
 
         <div class="CONTENEDOR-SUPERIOR ">
-            <img src="img\clouds.png" alt="" sizes="" srcset="">
+            <img src="img\clouds.png" class="NUBE-SUPERIOR" alt="" sizes="" srcset="">
             <h1>Soy Luis Albert</h1>
             <p>Un entusiasta desarrollador web jr.</p>
-            <img src="img\clouds.png" alt="" sizes="" srcset="">
+            <img src="img\clouds.png" class="NUBE-INFERIOR" alt="" sizes="" srcset="">
             <img src="img\Montaña1000px.png" alt="" sizes="" srcset="">
         </div>
 
