Mejorando posicionamiento de elementos

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         <link rel="stylesheet" href="css\styles.css">
 
        <!--Icono de la web -->
-       <link rel="shortcut icon" href="letter-l.png" type="image/x-icon">
-      <!--TODO:REVISAR ENALCE CON UDEMY-->>
-      <!--TODO:Actualizar sentencias basicas -->
+       <link rel="shortcut icon" href="img\letter-l.png" type="image/x-icon">
+
     </head>
     <body>
 
@@ -27,12 +26,17 @@
         -->
 
         <div class="CONTENEDOR-SUPERIOR ">
+
             <img src="img\clouds.png" class="NUBE-SUPERIOR" alt="" sizes="" srcset="">
-            <h1>Soy Luis Albert</h1>
-            <p>Un entusiasta desarrollador web jr.</p>
+
+            <h1 >Soy Luis Albert</h1>
+            <p  > Un <span>entusiasta</span> desarrollador web Jr.
+            </p>
             <img src="img\clouds.png" class="NUBE-INFERIOR" alt="" sizes="" srcset="">
             <img src="img\Montaña1000px.png" alt="" sizes="" srcset="">
+
         </div>
+
 
 
         <div class="CONTENEDOR-INTERMEDIO">
@@ -42,6 +46,8 @@
         <div class="CONTENEDOR-INFERIOR">
 
         </div>
+
+        
         <script src="" async defer></script>
 
 
