--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <div class="skill-row">
                 <img class="" src="img\bitbucket-pipelines-header.png" id="ImagenPerfil" alt="">
                     <h3>Correcto manejo de teconologías webs</h3>
-                    <p>Valiendome del uso de geniales las tecnologías webs adecuados a los que
-                        requieres puedo desarrollar sitios webs minimalistas sin perder la imagen y el
-                        mensaje que se quiere enviar con el diseño mismo.</p>
+                    <p> Puedo  desarrollar eso que buscas y necesitas, hacienndo uso  las tecnologías webs adecuadas
+                         puedo desarrollar sitios webs minimalistas sin perder la imagen y el
+                        mensaje que se quiere enviar con toda la apariencia de la web.</p>
                 </div>
                 <div class="skill-row">
                     <img class="" src="img\SD-futuro.png" id="ImagenPerfil" alt="">
