--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="img\clouds.png" class="NUBE-SUPERIOR" alt="" sizes="" srcset=""> -->
 
             <h1>Soy Luis Albert</h1>
-            <h2> Un <span style="color: #597CCB">entusiasta :D </span> desarrollador web Jr.</h2>
+            <h2> Un <span style="color: #597CCB">entusiasta </span> desarrollador web Jr.</h2>
             
             <!--   <img src="img\clouds.png" class="NUBE-INFERIOR" alt="" sizes="" srcset=""> -->
 
