--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
      
        <!--Referencia de fuentes de letras  usadas -->
        <link href="https://fonts.googleapis.com/css?family=Caveat|Oswald|Ubuntu" rel="stylesheet">
+       <!--Referencia de fuente de iconos fontawesome usados -->
        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     </head>
     <body>
