--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="SUBPERFIL">
             <img src="img\imgonline-com-ua-shape-TXO5ogfIKphSph.png"id="ImagenPerfil"alt="">
             <h2>Hola!.</h2>
-            <p>Soy un desarrollador web Jr, un dominicano apasionado del desarrollo we lo que sumado a mi constante aprendizaje me impulsa a seguir cada día mas
+            <p>Soy un desarrollador web Jr, soy un apasionado del desarrollo we lo que sumado a mi constante aprendizaje me impulsa a seguir cada día mas
             aprendiendo para poder desarrollar mejores propuestas en lo que a desarrollo web se refiere .</p>
       </div>
     </div>
